Fix moving hotspots when expand/collapse tree in Simple template

--- a/src/css/hint.less
+++ b/src/css/hint.less
@@ -105,6 +105,7 @@
 
             .hotspot-on-image-container{
                 text-align: center;
+				line-height: 0;
             }
 
             .hint-content + .hint-content {
